# Virtual-Product-Matcher

./: -files --others --exclude-standard  .gitignore  .replit  README.md  app.py  h origin main  netlify.toml  pyproject.toml  render.yaml  replit.md  requirements.txt  start_app.bat  start_app.py  start_app.sh
attached_assets/: Pasted-Here-s-a-single-copy-paste-Build-Deploy-prompt-you-can-drop-into-Replit-AI-or-any-similar-code-1756442142025_1756442142026.txt
config/: performance.py
data/: product_embeddings.json  products.json
public/: index.html
scripts/: generate_embeddings.py  performance_monitor.py
utils/: embedding_generator.py  image_processor.py  similarity_search.py
